edit settings by form (simple version)

--- a/src/index.css
+++ b/src/index.css
@@ -468,3 +468,11 @@ pre[class*="language-"] {
     width: 100%;
   }
 }
+.rjsf {
+  background-color: white !important;
+  border: none;
+  padding: .5em;
+}
+.rjsf button {
+  border: 1px solid black !important;
+}
